# metodos-numericos-I

./: .gitmodules  CMakeLists.txt  README.md
src/: main.cpp
src/linear_systems_solver/: gauss_elimination.cpp  gauss_elimination.h  gauss_jacobi.cpp  gauss_jacobi.h  gauss_jordan.cpp  gauss_jordan.h  gauss_seidel.cpp  gauss_seidel.h  linear_systems_solver_test.cpp  linear_systems_solver_test.h  lu_factorization.cpp  lu_factorization.h
src/root_finding/: root_finding.cpp  root_finding.h  root_finding_test.cpp  root_finding_test.h
src/utils/: Function.cpp  Function.h
